task 改变主题色

--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -49,7 +49,7 @@
   --vp-c-gray-3: #ebebef;
   --vp-c-gray-soft: rgba(142, 150, 170, 0.14);
 
-  --vp-c-indigo-1: #3451b2;
+  --vp-c-indigo-1: #646cff;
   --vp-c-indigo-2: #3a5ccc;
   --vp-c-indigo-3: #5672cd;
   --vp-c-indigo-soft: rgba(100, 108, 255, 0.14);
