--- a/.vitepress/theme/index.css
+++ b/.vitepress/theme/index.css
@@ -9,7 +9,20 @@
 }
 
 iframe {
-  width: 100%;  /* 或指定一个具体的宽度值 */
+  width: 100%; /* 或指定一个具体的宽度值 */
   height: 500px; /* 或指定一个具体的高度值 */
   border: none;
+}
+.VPContent .VPDoc {
+  padding-left: 5px !important;
+  padding-right: 5px !important;
+}
+
+.content-container {
+  margin-left: 10px !important;
+  margin-right: 10px !important;
+}
+
+.VPDoc.has-aside .content-container[data-v-10119189] {
+  max-width: 800px;
 }
