--- a/.vitepress/theme/index.css
+++ b/.vitepress/theme/index.css
@@ -15,6 +15,7 @@ iframe {
 }
 .VPContent .VPDoc {
   padding-left: 5px !important;
+  padding-right: 5px !important;
 }
 
 .content-container {
@@ -22,6 +23,6 @@ iframe {
   margin-right: 10px !important;
 }
 
-.VPDoc.has-aside .content-container[data-v-10119189] {
-  max-width: 800px;
+.content-container .main {
+  width: 800px;
 }
